--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,3 +5,17 @@ application:
       names: User
   localstack: true
 
+management:
+  endpoints:
+    enabled-by-default: false
+    web:
+      exposure:
+        include: 'health,prometheus'
+  endpoint:
+    health:
+      enabled: true
+      show-details: always
+    metrics:
+      enabled: true
+    prometheus:
+      enabled: true
