--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,9 @@ ext {
 
 dependencies {
     implementation 'org.codehaus.groovy:groovy'
+    implementation group: 'io.micrometer', name: 'micrometer-registry-prometheus', version: '1.8.2'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
     //aws
     implementation platform("software.amazon.awssdk:bom:${awsSdkVersion}")
