--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,7 @@ networks:
 
 volumes:
   prometheus_data:
+  grafana_data:
 
 services:
   localstack:
@@ -28,3 +29,10 @@ services:
       - aw-network
     ports:
       - 9090:9090
+
+  grafana:
+    image: grafana/grafana:latest
+    ports:
+      - 3000:3000
+    networks:
+      - aw-network
